--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,20 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=GYGABO\\SQLEXPRESS;Database=JarredsOrderHub;Trusted_Connection=True;TrustServerCertificate=True"
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=GYGABO\\SQLEXPRESS;Database=JarredsOrderHub;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "EmailSettings": {
+    "FromEmail": "jarredsorderhub@gmail.com",
+    "Password": "uftw acvp bexb xmls",
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "EnableSsl": true
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
