--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-obj/Debug/net8.0/JarredsOrderHub.AssemblyInfo.cs
-obj/Debug/net8.0/JarredsOrderHub.AssemblyInfoInputs.cache
-obj/Debug/net8.0/JarredsOrderHub.csproj.AssemblyReference.cache
-obj/Debug/net8.0/JarredsOrderHub.GeneratedMSBuildEditorConfig.editorconfig
+# Archivos generados
+[Bb]in/
+[Oo]bj/
+*.user
+*.suo
+*.cache
+*.generated.cs
